			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04z: *********************************

BUG: (9/18/06, SMR) Auto-stitch may connect contact to wrong side of transistor (Bug #1226).
FIX: Prevent arc-to-node routing on well layers.

IMP: (9/18/06, DN) Default value of useClientServer option is off.

************************* Version 8.04y: *********************************

BUG: (9/15/06, SMR) Technology editor cannot handle PCB technology.
FIX: Fixed conversion from tech-to-lib and from lib-to-tech to handle circles and dots.

BUG: (9/14/06, DN) Assertion error in layer drawing (Bug #1224)
FIX: In LayerDrawing.drawList combine both VectorCircle cases.

BUG: (9/14/06, GVG) Design Rules dialog not working properly for TSMC90 and many wide rules
FIX: designRulesEditChanged fixed.

BUG: (9/14/06, SMR) Interactive sizing fails on rotated nodes (Bug #1201)
FIX: In SizeListener.getNewNodeSize(), reallocate farthest point.

IMP: (9/14/06, GVG) Improvements in FillGenerator dialog to give access to fills with cap transistors.

IMP: (9/14/06, SMR) Layers preferences warns you when changing the color of
     a layer that is transparent...it will affect other layers.

BUG: (9/14/06, SMR) Cross-library copy may copy too many cells (Bug #1222).
FIX: When multiple items are selected, send them all for copying at once.

BUG: (9/13/06, DN) ExceptionInInitializerError in initAllTechnologies due to custom user preferences (Bug #1219).
FIX: In Layer.newInstance check only factory colors.

BUG: (9/13/06, GVG) AFG not working properly with min spacing distance between metals
FIX: getting the correct DRC value.

BUG: (9/13/06, DN) AssertionError in Cell.addNode after library rename (Bug #1220).
FIX: In NodeInst.newInstance/ArcInst.newInstance search for spare nodeId/arcId.

IMP: (9/12/06, GVG) 3 new dummy layers in TSMC90. RPDMY was added into rpo poly resistors.
